One more fix for our-services page on iphone

--- a/styles/components/service-block.scss
+++ b/styles/components/service-block.scss
@@ -1,5 +1,6 @@
 .service-block {
   padding-top: 75px;
+  overflow: hidden;
   @media (min-width: $tablet) {
     padding-top: 80px;
   }
@@ -73,7 +74,7 @@
     width: 100%;
     @media (min-width: $desktop) {
       padding: 30px;
-      width: auto;  
+      width: auto;
     }
     
     img {
